# core

./: .babelrc  .dockerignore  .env  .eslintrc.js  .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  .graphqlconfig.yml  .watchmanconfig  Dockerfile  Dockerfile.base  Dockerfile.oldbase  LICENSE  Makefile  Pipfile  Procfile.dev  README.md  alembic.ini  deploy.sh  develop.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docker-sync.yml  env  env.example  install.sh  main.py  manage.py  mypy.ini  nginx.config  package-lock.json  package.json  prepare_solver_linux.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.in  requirements.txt  (+8 more)
alembic/: env.py
backend/: .dockerignore  .flake8  .gitignore  Dockerfile  gunicorn_conf.py  k8s-pod.yaml  manage.py  mypy.ini  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.in  requirements.txt  skaffold.yaml  test.sh
booking/: .dockerignore  Dockerfile  Makefile  README.md  craco.config.js  nginx.conf  package-lock.json  package.json  tsconfig.json  tslint.json
chrome/: Dockerfile
docker/: Dockerfile  Dockerfile.chrome  Procfile.mac  Procfile.mixed  compose.ci.yml  compose.dev-extra.yml  compose.dev-mac.yml  compose.dev.yml  compose.prod.yml
frontend/: .babelrc  .dockerignore  .env.development  .env.production  .eslintrc  .eslintrc.js  .gitignore  Dockerfile  codegen.yaml  generate-graphql-schema.js  jest.config.js  jest.setup.ts  next.config.js  next.raw-config.js  package-lock.json  package.json  schema.graphql  tailwind.config.js  tsconfig.json  webpack.server.js  (+1 more)
(+4130 files in other folders)
